--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,14 @@
     "repositories": [
         {
             "type": "vcs",
-            "url": "https://github.com/Zolotar1988/MIRBundle.git"
+            "url": "https://github.com/Zolotar1988/MIRBundle.git "
         }
     ],
+    
+    "autoload": {
+        "psr-4": { "Olabs\\MIRBundle\\OlabsMIRBundle": "" }
+    },
+    
     "scripts": {
     "post-install-cmd": [
         "OLabs\\MIRBundle\\OLabsMIRBundle\\Composer\\RegisterMIRBundle::registerMIRBundle"
