--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,25 @@
 {
     "name": "oylabs/mobile-image-resizer",
+    "description": "Mobile Image Resizer",
+    "keywords": ["mobile", "resize", "image"],
+    "type": "symfony-bundle",
     "license": "MIT",
-    "type": "project",
-    "description": "Mobile Image Resize",
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/Zolotar1988/MIRBundle.git "
-        }
-    ],
-    
-    "autoload": {
-        "psr-4": { "Olabs\\MIRBundle\\OlabsMIRBundle\\": "" }
-    },
-    
-    "scripts": {
-    "post-install-cmd": [
-        "OLabs\\MIRBundle\\OLabsMIRBundle\\Composer\\RegisterMIRBundle::registerMIRBundle"
-    ]
-},
+    "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.3",
         "imagine/imagine": "0.6.*@dev",
         "antwebes/image-resize-bundle": "dev-master",
         "jms/serializer-bundle": "dev-master"
-    }
+    },
+
+    "autoload": {
+        "psr-0": { "Olabs\\Bundle\\MIRBundle": "" }
+    },
+    "target-dir": "Olabs/Bundle/MIRBundle",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/Zolotar1988/MIRBundle.git "
+        }
+    ]
 }
