--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,8 @@
         "jms/serializer-bundle": "dev-master"
     },
 
-"autoload": {
-        "psr-0": {
-            "": "src/"
-        }
+ "autoload": {
+        "psr-0": {"Olabs": "src/"}
     },
 
     
